<resources>
    <string name="app_name">Note</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="empty_notes">笔记本空空如也~</string>

    <string name="action_settings">设置</string>
    <string name="search">搜索</string>
    <string name="sort">排序</string>
    <string name="filter">筛选</string>
    <string name="remove">删除</string>
    <string name="my_note">笔记</string>
    <string name="my_bill">账单</string>
    <string name="my_draft">草稿</string>
    <string name="settings">设置</string>
    <string name="night_mode">夜晚</string>
    <string name="send">发送</string>
    <string name="share">分享</string>
    <string name="note_title">标题</string>
    <string name="note_content">内容</string>
    <string name="title_activity_create_note">创建新笔记</string>
    <string name="title_error">标题不能为空呢</string>
    <string name="content_error">内容不能为空呢</string>
    <string name="action_edit">编辑</string>
    <string name="action_save">保存</string>

    <!-- 默认的笔记类别 -->
    <string name="default_note_type">默认</string>

    <!-- 数据库操作提示信息 -->
    <string name="category_already_exists">已经存在这个类别</string>

</resources>
