<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_note"
            android:title="@string/my_note" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_bill"
            android:title="@string/my_bill" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_night"
            android:title="@string/night_mode" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
